Year 3 Semester 2/Microservices/k8s/db2_service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db2-deployment
  labels:
    app: db2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db2
  template:
    metadata:
     labels:
       app: db2
    spec:
      containers:
        - name: db2
          # image: db2-image
          image: sosnoviybor/microsevices-db2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
