Year 3 Semester 2/Microservices/k8s/db2_service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db2
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/db2
            pathType: "Prefix"
            backend:
              service:
                name: db2-service
                port:
                  number: 80
